[tool.poetry]
name = "social-media-nlp"
version = "0.1.0"
description = "Applications of Data Sciente to Marketing: Sentiment Analysis."
authors = ["acampillos"]
packages = [{ include = "social_media_nlp", from = "src" },]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
numpy = "^1.26.4"
nltk = "^3.8.1"
spacy = "^3.7.4"
datasets = "^2.18.0"
wordsegment = "^1.3.1"
sentence-transformers = "^2.5.1"
networkx = "^3.2.1"
transformers = "4.38"
accelerate = "^0.28.0"
bitsandbytes = "^0.43.0"
peft = "^0.9.0"
trl = "^0.7.11"
mlflow = { version = "^2.11.3", extras = ["genai"]}
psutil = "^5.9.8"
pynvml = "^11.5.0"
text-generation = "^0.7.0"
huggingface-hub = "^0.21.4"
packaging = "23.0"
ninja = "^1.11.1.1"
wheel = "^0.43.0"
# flash-attn
optuna = "^3.6.0"
optuna-dashboard = "^0.15.0"
plotly = "^5.21.0"
nbformat = "^5.10.4"
evaluate = "^0.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
